add styles components

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21"
+    "react-hot-loader": "^4.12.21",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^9.1.0",
