--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "emailjs-com": "^2.4.1",
     "infinite-react-carousel": "^1.2.11",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-hot-loader": "^4.12.21",
     "react-page-scroller": "^2.0.7-beta",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
+    "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
